--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <header class="header">
          <div class="left-head">
             <div class="hamburger">
-               hamb
+              <a id="nav-toggle" href="#"><span></span></a>
             </div>
             <div class="logo">
                <img src="images/logo.png" alt="" class="logo-img">
@@ -183,5 +183,6 @@
       		&copy; 2017 Photobook. All rights reserve
       	</div>
       </footer>
+      <script src = 'script.js'></script>
    </body>
 </html>
